removing getFirst()
Signed-off-by: Jeremy Dupras <jdupras@amazon.com>